objects/FieloSVY__SurveyResponse__c.object
<CustomObject>
    <fields>
        <fullName>FieloSVY__EventPollster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pollster Event</label>
        <referenceTo>FieloEE__Event__c</referenceTo>
        <relationshipLabel>Survey Responses (Pollster Event)</relationshipLabel>
        <relationshipName>Survey_Responses_Pollster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>FieloEE__Event__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Pollster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pollster</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Survey Responses (Pollster)</relationshipLabel>
        <relationshipName>Survey_Responses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>FieloSVY__Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__TransactionPollster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pollster Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Survey Responses (Pollster Transaction)</relationshipLabel>
        <relationshipName>Survey_Responses_Pollster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>